# wpd-1-hrpe

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  predictions.csv  pyproject.toml  setup.py
data/submission_template/: Submission_template_august.csv  Submisson_template_september.csv
docs/submission_template/: Submission_template_august.csv
explorations/: Explore1.py  Explore2.py  aa_02_loads.py  aa_03_example_subs.py  aa_04_cv.py  aa_05_xdd_invest.py  example_subs.py  ml_01_eda.py  ml_02_initial_model.py  ml_03_darts.py  ml_04_darts_ets_aug.py  ml_05_darts_new.py  ml_06_lightgbm.py  ml_07_crossvalidation.py  ml_08_parallel_cv.py  ml_09_density_parallel_cv.py  ml_10_all_features.py
hrpe/: main.py
hrpe/data/: clean.py  load.py  load.py.bd7129a4b10c8b36eb5df9615deba246.tmp  raw.py  transform.py
hrpe/features/: deltas.py  time.py  transform.py  weather.py  xdd.py
hrpe/models/: base.py  darts.py  ets.py  eval.py  periodic.py  selection.py
hrpe/submit/: create_submission.py
hrpe/visualization/: visualize.py
tests/: test_hrpe.py
