[tool.poetry]
name = "hrpe"
version = "0.1.0"
description = ""
authors = ["ari-nz <hello@ari.nz>", "mklienz <mklienz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
requests = "^2.26.0"
pandas = "^1.3.4"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.11.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-raw = "hrpe.data.raw:download"
